crates/swc_ecma_parser/tests/pat/errors/issue-2834/input.js
([(a)]) => {};
({ a: (b) }) => {};
for (const [(a)] of arr) {}
